--- a/page.html
+++ b/page.html
@@ -79,7 +79,7 @@
               <a href="https://goo.gl/maps/mLKeLdBXbAHiVDee9"> Jl. Kemang Timur XV Rt 010/RW 003. Bangka, Mampang Prapatan</a>
             </div>
             <div class="col-lg-4 col-mb-4">
-              <div class="ms-5">
+              <div class="kontakweb">
                 <h3>Kontak</h3>
               <ul>
                 <li>Email     : hymy@indonesia.com</li>
