--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container py-5">
           <div class="row align-items-center">
             <div class="col-lg-6">
-              <h2>Capai Skil <span> Terbaikmu </span> Dengan <span>Materi</span> Kami</h2>
+              <h2>Capai Skill <span> Terbaikmu </span> Dengan <span>Materi</span> Kami</h2>
                       <p>Investasi satu kali, pembelajaran seumur hidup</p>
                         <a href="page.html" class="btn btn-warning">PELAJARI SEKARANG </a>
             </div>
